fixed missaligned containers, especially on phones

--- a/css/segments/styleFooter.css
+++ b/css/segments/styleFooter.css
@@ -10,7 +10,7 @@ footer {
     }
 
 .footer-container {
-    width: 100%;
+    width: 50%;
     height: fit-content;
     margin: auto;
     padding: 10px;
@@ -28,4 +28,24 @@ footer ul {
     text-align: center;
     list-style-type: none;
     font-size: 1.5rem;
+}
+
+@media only screen and (max-width: 1100px) {
+    .footer-container {
+        width: 70%;
+    }
+
+        .footer-container:hover {
+            width: 75%;
+        }
+}
+
+@media only screen and (max-width: 500px) {
+    .footer-container {
+        width: 90%;
+    }
+
+        .footer-container:hover {
+            width: 90%;
+        }
 }
